- merge settings and unit profile - use settings in map display